// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepOverview component when the student is on step one renders 1`] = `
<StepOverview
  activeStep={1}
  handleClick={[Function]}
>
  <div
    className="step-overview"
  >
    <h1>
      Here’s what you’ll do
    </h1>
    <Step
      active={true}
      handleClick={[Function]}
      step={
        Object {
          "html": <p>
            Read a text and highlight sentences.
          </p>,
          "stepNumber": 1,
        }
      }
    >
      <section
        className="step-overview-step-container"
      >
        <button
          className="step-overview-step active focus-on-dark"
          onClick={[Function]}
          type="button"
        >
          <div
            className="left-side-container"
          >
            <div
              className="evidence-step-number-small active"
            >
              1
            </div>
            <span
              className="sr-only"
            >
              This is the active step:
            </span>
            <p>
              Read a text and highlight sentences.
            </p>
          </div>
          <div
            aria-hidden="true"
            className="now-tag"
          >
            Now
          </div>
        </button>
      </section>
    </Step>
    <Step
      active={false}
      step={
        Object {
          "html": <p>
            Expand a sentence using 
            <u>
              because
            </u>
             to provide a reason.
          </p>,
          "stepNumber": 2,
        }
      }
    >
      <section
        className="step-overview-step-container"
      >
        <div
          className="step-overview-step"
        >
          <div
            className="evidence-step-number-small"
          >
            2
          </div>
          <p>
            Expand a sentence using 
            <u>
              because
            </u>
             to provide a reason.
          </p>
        </div>
      </section>
    </Step>
    <Step
      active={false}
      step={
        Object {
          "html": <p>
            Expand a sentence using 
            <u>
              but
            </u>
             to provide an opposing idea.
          </p>,
          "stepNumber": 3,
        }
      }
    >
      <section
        className="step-overview-step-container"
      >
        <div
          className="step-overview-step"
        >
          <div
            className="evidence-step-number-small"
          >
            3
          </div>
          <p>
            Expand a sentence using 
            <u>
              but
            </u>
             to provide an opposing idea.
          </p>
        </div>
      </section>
    </Step>
    <Step
      active={false}
      step={
        Object {
          "html": <p>
            Expand a sentence using 
            <u>
              so
            </u>
             to provide a result.
          </p>,
          "stepNumber": 4,
        }
      }
    >
      <section
        className="step-overview-step-container"
      >
        <div
          className="step-overview-step"
        >
          <div
            className="evidence-step-number-small"
          >
            4
          </div>
          <p>
            Expand a sentence using 
            <u>
              so
            </u>
             to provide a result.
          </p>
        </div>
      </section>
    </Step>
  </div>
</StepOverview>
`;

exports[`StepOverview component when the student is past step one renders 1`] = `
<StepOverview
  activeStep={2}
  handleClick={[Function]}
>
  <div
    className="step-overview"
  >
    <h1>
      Nice! Keep going!
    </h1>
    <Step
      active={false}
      completed={true}
      handleClick={[Function]}
      step={
        Object {
          "html": <p>
            Read a text and highlight sentences.
          </p>,
          "stepNumber": 1,
        }
      }
    >
      <section
        className="step-overview-step-container"
      >
        <div
          className="step-overview-step completed"
        >
          <img
            alt="White check with green background icon"
            src="undefined/images/icons/icons-check-circle-dark.svg"
          />
          <p>
            Read a text and highlight sentences.
          </p>
        </div>
      </section>
    </Step>
    <Step
      active={true}
      completed={false}
      handleClick={[Function]}
      step={
        Object {
          "html": <p>
            Expand a sentence using 
            <u>
              because
            </u>
             to provide a reason.
          </p>,
          "stepNumber": 2,
        }
      }
    >
      <section
        className="step-overview-step-container"
      >
        <button
          className="step-overview-step active focus-on-dark"
          onClick={[Function]}
          type="button"
        >
          <div
            className="left-side-container"
          >
            <div
              className="evidence-step-number-small active"
            >
              2
            </div>
            <span
              className="sr-only"
            >
              This is the active step:
            </span>
            <p>
              Expand a sentence using 
              <u>
                because
              </u>
               to provide a reason.
            </p>
          </div>
          <div
            aria-hidden="true"
            className="now-tag"
          >
            Now
          </div>
        </button>
      </section>
    </Step>
    <Step
      active={false}
      completed={false}
      handleClick={[Function]}
      step={
        Object {
          "html": <p>
            Expand a sentence using 
            <u>
              but
            </u>
             to provide an opposing idea.
          </p>,
          "stepNumber": 3,
        }
      }
    >
      <section
        className="step-overview-step-container"
      >
        <div
          className="step-overview-step"
        >
          <div
            className="evidence-step-number-small"
          >
            3
          </div>
          <p>
            Expand a sentence using 
            <u>
              but
            </u>
             to provide an opposing idea.
          </p>
        </div>
      </section>
    </Step>
    <Step
      active={false}
      completed={false}
      handleClick={[Function]}
      step={
        Object {
          "html": <p>
            Expand a sentence using 
            <u>
              so
            </u>
             to provide a result.
          </p>,
          "stepNumber": 4,
        }
      }
    >
      <section
        className="step-overview-step-container"
      >
        <div
          className="step-overview-step"
        >
          <div
            className="evidence-step-number-small"
          >
            4
          </div>
          <p>
            Expand a sentence using 
            <u>
              so
            </u>
             to provide a result.
          </p>
        </div>
      </section>
    </Step>
  </div>
</StepOverview>
`;
